--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,3 +55,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+mongodb.uri ="mongodb://localhost:27017/hackinder"
+
