--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,3 +57,14 @@ logger.application=DEBUG
 
 mongodb.uri ="mongodb://localhost:27017/hackinder"
 
+oauth2.authproviderx509certurl = "https://www.googleapis.com/oauth2/v1/certs"
+oauth2.authuri = "https://accounts.google.com/o/oauth2/auth"
+# oauth2.clientemail = ""
+# oauth2.clientid = ""
+# oauth2.clientsecret = ""
+oauth2.clientx509certurl = "https://www.googleapis.com/robot/v1/metadata/x509/737041603743@developer.gserviceaccount.com"
+oauth2.javascriptorigin = "http://localhost:9000"
+oauth2.redirecturi = "http://localhost:9000/oauth2callback"
+oauth2.tokenuri = "https://accounts.google.com/o/oauth2/token"
+
+include "local.conf"
