--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,4 +67,13 @@ oauth2.javascriptorigin = "http://localhost:9000"
 oauth2.redirecturi = "http://localhost:9000/oauth2callback"
 oauth2.tokenuri = "https://accounts.google.com/o/oauth2/token"
 
+# SMTP
+smtp.mock = true
+smtp.host = ""
+smtp.port = 25
+smtp.ssl = false
+smtp.tls = false
+smtp.user = ""
+smtp.pass = ""
+
 include "local.conf"
